--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,21 +1,51 @@
-# Bug: `Сюда впишите название бага`
+name: 🐛 Bug Report
+description: Сообщить об ошибке в проекте
+title: "[BUG] "
+labels: [bug]
+assignees: []
 
-## Summary
+body:
+  - type: input
+    id: summary
+    attributes:
+      label: Краткое описание
+      placeholder: Например: Кнопка "Сохранить" не работает
+    validations:
+      required: true
 
-Короткое описание ошибки
+  - type: textarea
+    id: steps
+    attributes:
+      label: Шаги, чтобы воспроизвести ошибку
+      description: Напиши пошагово, как воспроизвести баг
+      placeholder: |
+        1. Перейти на страницу входа
+        2. Ввести данные
+        3. Нажать "Войти"
+        4. Получить ошибку
+    validations:
+      required: true
 
-## Environment
+  - type: textarea
+    id: expected
+    attributes:
+      label: Что должно было произойти
+      placeholder: Например: Должна была открыться домашняя страница
 
-Ссылка на билд или коммит, версия ПО и всего окружения
+  - type: textarea
+    id: actual
+    attributes:
+      label: Что произошло на самом деле
+      placeholder: Например: Появилось сообщение об ошибке "401 Unauthorized"
 
-## Steps to reproduce
+  - type: textarea
+    id: environment
+    attributes:
+      label: Информация о среде
+      placeholder: Например: Chrome 115 / macOS / версия 1.2.3
 
-Полный перечень шагов для воспроизведения
-
-## Expected result
-
-Какой результат должен был быть без ошибки
-
-## Actual result
-
-Какой результат получился на самом деле
+  - type: textarea
+    id: screenshots
+    attributes:
+      label: Скриншоты или логи (если есть)
+      description: Прикрепи скриншоты или вставь текст ошибки
